--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,12 @@ gunicorn==20.0.4
 pycodestyle==2.5.0
 pytz==2020.1
 sqlparse==0.3.1
+asgiref==3.2.7
+autopep8==1.5.2
+dj-database-url==0.5.0
+Django==3.0.6
+gunicorn==20.0.4
+pycodestyle==2.5.0
+pytz==2020.1
+sqlparse==0.3.1
+whitenoise==5.1.0
